Bug: refactor layout for the fixed position nav on mobile
fixes #1

--- a/css/globals/base.less
+++ b/css/globals/base.less
@@ -15,7 +15,6 @@ html, button, input, textarea, select {
 
 body {
   .font-s3();
-  background: @color-raw;
   color: @color-well;
 }
 
