--- a/css/globals/templates/layout.less
+++ b/css/globals/templates/layout.less
@@ -1,22 +1,25 @@
 // Layout animations
-
-html {
-  background: black;
-  overflow: hidden; //prevents scrolling when menu is open
-}
-
+@transition-time: 600ms;
+@transition-distance: 260px;
 body {
   .fill-with-absolute-position;
-  .transition(all 600ms cubic-bezier(0.175, 0.885, 0.335, 1.05));
+  background: black;
+  overflow: hidden; //prevents scrolling when menu is open
+
+  > * {
+    .transition(all @transition-time cubic-bezier(0.175, 0.885, 0.335, 1.05));
+    .backface-visibility(hidden);
+  }
 
   .site-nav {
-    opacity: 1;
     .transform(scale(1));
-    .transition(all 600ms cubic-bezier(0.175, 0.885, 0.335, 1.05));
+    .transition(all @transition-time cubic-bezier(0.175, 0.885, 0.335, 1.05));
+    opacity: 1;
   }
 
   &.menu-active {
-    .transform(translateX(260px));
+    > * { .transform(translateX(@transition-distance)); }
+
     .content-overlay { //intercepts clicks and scroll events when menu is active
       .fill-with-absolute-position;
       background: transparent;
@@ -32,19 +35,20 @@ body {
 
 .content {
   .fill-with-absolute-position;
+  background: @color-raw;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 
 nav {
   .perspective(2000);
-  .position(absolute, 0, auto, auto, -260px, 260px, 100%);
+  .position(absolute, 0, auto, auto, -@transition-distance, @transition-distance, 100%);
   -webkit-overflow-scrolling: touch;
 
   .wrapper {
     .backface-visibility(hidden);
     .fill-with-absolute-position;
-    .transition(all 500ms cubic-bezier(0.175, 0.885, 0.335, 1.05));
+    .transition(all @transition-time cubic-bezier(0.175, 0.885, 0.335, 1.05));
     .transform-origin(100% 0%);
     .transform-style(preserve-3d);
 
