--- a/css/views/single.less
+++ b/css/views/single.less
@@ -32,6 +32,7 @@ body.single {
     overflow: hidden;
     position: relative;
     width: 100%;
+    z-index: 0;
 
 
     .hero-content {
